--- a/app/entry/entry.html
+++ b/app/entry/entry.html
@@ -28,7 +28,7 @@
     <div>
         <button class="btn btn-primary btn-style" ng-click="go('/add')">Add New Contact</button>
     </div>
-    <div>
-        <button class="btn" ng-click="reset()">RESET</button>
-    </div>
+    <!--<div>-->
+        <!--<button class="btn" ng-click="reset()">RESET</button>-->
+    <!--</div>-->
 </div>
