--- a/app/entry/entry.html
+++ b/app/entry/entry.html
@@ -21,7 +21,7 @@
             <td>{{contact.phone}}</td>
             <td>{{contact.email}}</td>
             <td>{{contact.birthday}}</td>
-            <td><button class="btn btn-info" ng-click="go('/contact',contact.id); $storage.data = response.data;">View</button></td>
+            <td><button class="btn btn-info" ng-click="go('/contact',contact.id);">View</button></td>
         </tr>
         </tbody>
     </table>
